--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,5 @@
 {
-  "files": [
-    "src/index.ts"
-  ],
+  "files": ["src/index.ts"],
   "exclude": ["dist"],
   "compilerOptions": {
     "target": "es2020",
@@ -15,5 +13,6 @@
     "outDir": "dist",
     "declaration": true,
     "declarationDir": "types"
-  }
+  },
+  "include": ["src", "types"]
 }
